Bug fixes, more to go